--- a/RoteiroTuristicoBeja_02/app/src/main/AndroidManifest.xml
+++ b/RoteiroTuristicoBeja_02/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RoteiroTuristicoBeja_02">
+        <activity android:name=".SecondActivity"
+            android:parentActivityName=".MainActivity"
+            android:label="Details"/>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
