--- a/RoteiroTuristicoBeja_02/app/src/main/AndroidManifest.xml
+++ b/RoteiroTuristicoBeja_02/app/src/main/AndroidManifest.xml
@@ -2,13 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.roteiroturisticobeja_02">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RoteiroTuristicoBeja_02">
+        android:theme="@style/Theme.RoteiroTuristicoBeja_02"
+        android:usesCleartextTraffic="true">
+
         <activity android:name=".SecondActivity"
             android:parentActivityName=".MainActivity"
             android:label="Details"/>
