--- a/RoteiroTuristicoBeja_02/app/src/main/AndroidManifest.xml
+++ b/RoteiroTuristicoBeja_02/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RoteiroTuristicoBeja_02"
         android:usesCleartextTraffic="true">
-        <activity android:name=".SingleActivity" />
+        <activity android:name=".FreeVisitActivity" />
         <activity android:name=".GroupActivity" />
         <activity
             android:name=".SecondActivity"
