--- a/NewRoteiroTuristicoBeja/app/src/main/AndroidManifest.xml
+++ b/NewRoteiroTuristicoBeja/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="ipbeja.pac.roteirosturisticosdebeja">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,10 +15,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RoteirosTuristicosDeBeja"
+        android:usesCleartextTraffic="true"
+        android:theme="@style/Theme.RoteirosTuristicosDeBeja.NB"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".viewFragments.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
