--- a/NewRoteiroTuristicoBeja/app/build.gradle
+++ b/NewRoteiroTuristicoBeja/app/build.gradle
@@ -28,7 +28,12 @@ android {
     }
 }
 
+
 dependencies {
+
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
